eks/netpol/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    env: test
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    env: prod
